--- a/cp-all-in-one-kraft/docker-compose.yml
+++ b/cp-all-in-one-kraft/docker-compose.yml
@@ -42,13 +42,20 @@ services:
       - broker
     ports:
       - "8081:8081"
+      - "8084:8084"
     volumes:
     - ./conf:/conf
     - ./files:/files
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'broker:29092'
-      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
+      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081,https://0.0.0.0:8084
+      SCHEMA_REGISTRY_INTER_INSTANCE_PROTOCOL: https
+      SCHEMA_REGISTRY_SSL_KEYSTORE_LOCATION: /conf/tls/kafka.server.keystore.jks
+      SCHEMA_REGISTRY_SSL_KEYSTORE_PASSWORD: ${PASS:-Test123@}
+      SCHEMA_REGISTRY_SSL_KEY_PASSWORD: ${PASS:-Test123@}
+      SCHEMA_REGISTRY_SSL_TRUSTSTORE_LOCATION: /conf/tls/kafka.server.truststore.jks
+      SCHEMA_REGISTRY_SSL_TRUSTSTORE_PASSWORD: Test123@
       SCHEMA_REGISTRY_AUTHENTICATION_METHOD: BASIC
       SCHEMA_REGISTRY_AUTHENTICATION_REALM: SchemaRegistry
       SCHEMA_REGISTRY_AUTHENTICATION_ROLES: user,developer,admin
