--- a/cp-all-in-one-kraft/docker-compose.yml
+++ b/cp-all-in-one-kraft/docker-compose.yml
@@ -7,14 +7,16 @@ services:
     hostname: broker
     container_name: broker
     ports:
+      - "9092:9092"
       - "9093:9093"
       - "9101:9101"
     volumes:
     - ./conf:/conf
+    - ./secrets:/etc/kafka/secrets
     environment:
       KAFKA_NODE_ID: 1
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,TEST:SASL_PLAINTEXT'
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker:29092,TEST://172.17.0.1:9093'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,TEST:SASL_PLAINTEXT,SSL:SSL,SSL_HOST:SSL'
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker:29092,TEST://172.17.0.1:9092,SSL://broker:9094,SSL_HOST://172.17.0.1:9093'
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
@@ -23,7 +25,7 @@ services:
       KAFKA_JMX_HOSTNAME: localhost
       KAFKA_PROCESS_ROLES: 'broker,controller'
       KAFKA_CONTROLLER_QUORUM_VOTERS: '1@broker:29093'
-      KAFKA_LISTENERS: 'PLAINTEXT://broker:29092,CONTROLLER://broker:29093,TEST://0.0.0.0:9093'
+      KAFKA_LISTENERS: 'PLAINTEXT://broker:29092,CONTROLLER://broker:29093,TEST://0.0.0.0:9092,SSL://broker:29095,SSL_HOST://0.0.0.0:9093'
       KAFKA_INTER_BROKER_LISTENER_NAME: 'PLAINTEXT'
       KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
       KAFKA_LOG_DIRS: '/tmp/kraft-combined-logs'
@@ -32,6 +34,14 @@ services:
       # Replace CLUSTER_ID with a unique base64 UUID using "bin/kafka-storage.sh random-uuid" 
       # See https://docs.confluent.io/kafka/operations-tools/kafka-tools.html#kafka-storage-sh
       CLUSTER_ID: 'MkU3OEVBNTcwNTJENDM2Qk'
+      KAFKA_SSL_KEYSTORE_FILENAME: broker.keystore.jks
+      KAFKA_SSL_TRUSTSTORE_FILENAME: broker.truststore.jks
+      KAFKA_SSL_KEYSTORE_CREDENTIALS: cert_creds
+      KAFKA_SSL_KEY_CREDENTIALS: cert_creds
+      KAFKA_SSL_TRUSTSTORE_CREDENTIALS: cert_creds
+      KAFKA_SSL_ENABLED_PROTOCOLS: TLSv1.2,TLSv1.1,TLSv1
+      KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: " "
+      KAFKA_SSL_CLIENT_AUTH: requested
 
   schema-registry:
     image: confluentinc/cp-schema-registry:7.5.0
@@ -45,16 +55,19 @@ services:
     volumes:
     - ./conf:/conf
     - ./files:/files
+    - ./secrets:/etc/schema-registry/secrets
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'broker:29092'
       SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081,https://0.0.0.0:8084
       SCHEMA_REGISTRY_INTER_INSTANCE_PROTOCOL: https
-      SCHEMA_REGISTRY_SSL_KEYSTORE_LOCATION: /conf/tls/kafka.server.keystore.jks
-      SCHEMA_REGISTRY_SSL_KEYSTORE_PASSWORD: ${PASS:-Test123@}
-      SCHEMA_REGISTRY_SSL_KEY_PASSWORD: ${PASS:-Test123@}
-      SCHEMA_REGISTRY_SSL_TRUSTSTORE_LOCATION: /conf/tls/kafka.server.truststore.jks
-      SCHEMA_REGISTRY_SSL_TRUSTSTORE_PASSWORD: Test123@
+      SCHEMA_REGISTRY_SSL_KEYSTORE_LOCATION: /etc/schema-registry/secrets/schema-registry.keystore.jks
+      SCHEMA_REGISTRY_SSL_TRUSTSTORE_LOCATION: /etc/schema-registry/secrets/schema-registry.truststore.jks
+      SCHEMA_REGISTRY_SSL_KEYSTORE_PASSWORD: datahub
+      SCHEMA_REGISTRY_SSL_KEY_PASSWORD: datahub
+      SCHEMA_REGISTRY_SSL_TRUSTSTORE_PASSWORD: datahub
+      SCHEMA_REGISTRY_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: " "
+      SCHEMA_REGISTRY_SSL_CLIENT_AUTHENTICATION: "NONE"
       SCHEMA_REGISTRY_AUTHENTICATION_METHOD: BASIC
       SCHEMA_REGISTRY_AUTHENTICATION_REALM: SchemaRegistry
       SCHEMA_REGISTRY_AUTHENTICATION_ROLES: user,developer,admin
