--- a/cp-all-in-one-kraft/docker-compose.yml
+++ b/cp-all-in-one-kraft/docker-compose.yml
@@ -15,8 +15,8 @@ services:
     - ./secrets:/etc/kafka/secrets
     environment:
       KAFKA_NODE_ID: 1
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,TEST:SASL_PLAINTEXT,SSL:SSL,SSL_HOST:SSL'
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker:29092,TEST://172.17.0.1:9092,SSL://broker:9094,SSL_HOST://172.17.0.1:9093'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,TEST:SASL_PLAINTEXT,SSL:SSL,SSLHOST:SASL_SSL'
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker:29092,TEST://172.17.0.1:9092,SSL://broker:9094,SSLHOST://172.17.0.1:9093'
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
@@ -25,12 +25,13 @@ services:
       KAFKA_JMX_HOSTNAME: localhost
       KAFKA_PROCESS_ROLES: 'broker,controller'
       KAFKA_CONTROLLER_QUORUM_VOTERS: '1@broker:29093'
-      KAFKA_LISTENERS: 'PLAINTEXT://broker:29092,CONTROLLER://broker:29093,TEST://0.0.0.0:9092,SSL://broker:29095,SSL_HOST://0.0.0.0:9093'
+      KAFKA_LISTENERS: 'PLAINTEXT://broker:29092,CONTROLLER://broker:29093,TEST://0.0.0.0:9092,SSL://broker:29095,SSLHOST://0.0.0.0:9093'
       KAFKA_INTER_BROKER_LISTENER_NAME: 'PLAINTEXT'
       KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
       KAFKA_LOG_DIRS: '/tmp/kraft-combined-logs'
       KAFKA_OPTS: -Djava.security.auth.login.config=/conf/kafka_server.jaas
       KAFKA_LISTENER_NAME_TEST_SASL_ENABLED_MECHANISMS: PLAIN
+      KAFKA_LISTENER_NAME_SSLHOST_SASL_ENABLED_MECHANISMS: PLAIN
       # Replace CLUSTER_ID with a unique base64 UUID using "bin/kafka-storage.sh random-uuid" 
       # See https://docs.confluent.io/kafka/operations-tools/kafka-tools.html#kafka-storage-sh
       CLUSTER_ID: 'MkU3OEVBNTcwNTJENDM2Qk'
